tests/samples/0003/error.txt
error[P0031]: unexpected token `[`, expected an expression
  --> 0003/code.ara:5:10
  |
5 |     $a = [
  |          ^

error: failed to parse "0003/code.ara" due to the above issue(s)
 = summary: 1 error(s)

